# kompass

./: .dockerignore  .gitignore  CLAUDE.md  CONFIG_VALUES.md  CONTRIBUTING.md  KICKOFF.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  glama.json  go.mod  go.sum  package-lock.json
kompass_core/: __init__.py  __main__.py  config.py  db.py  main.py  models.py  pyproject.toml  redact.py  requirements-dev.txt  requirements-gcp.txt  requirements.txt
kompass_core/admin/: __init__.py  users_router.py
kompass_core/ai/: __init__.py  budget.py  chat.py  context.py  proposals.py  router.py  schemas.py  whitelist.py
kompass_core/ai/providers/: __init__.py  adapters.py  (+3 more)
kompass_core/audit/: __init__.py
kompass_core/auth/: __init__.py  dependencies.py  passwords.py  router.py  schemas.py  service.py  sessions.py
kompass_core/clusters/: __init__.py  injector.py  router.py  schemas.py  service.py
kompass_core/engine/: __init__.py  client.py
kompass_core/events/: __init__.py  router.py  service.py
kompass_core/gateway/: __init__.py  proxy.py
kompass_core/nodestats/: __init__.py  router.py  service.py
kompass_core/secretstore/: __init__.py  envelope.py  kms.py
kompass_core/tests/: _fakes.py  conftest.py  test_apply.py  test_apply_matrix.py  test_argon2_params.py  test_auth.py  test_authz_matrix.py  test_budget.py  test_chat.py  test_clusters.py  test_envelope.py  test_events.py  test_health.py  test_injection.py  test_no_upstream_branding.py  test_nodestats.py  test_phase3_matrix.py  test_providers.py  test_proxy.py  test_single_worker.py  test_whitelist.py
(+405 files in other folders)
