[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kompass-core"
version = "0.1.0"
description = "Auth gateway, AI orchestration, and control plane for Kompass."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["kompass_core", "kompass_core.engine", "kompass_core.gateway"]
package-dir = { "" = ".." }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
